# sonic

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  todo.txt  vcpkg.json
docs/: main.typ  refs.bib
src/: bvh.cu  camera.h  embree_accel.h  embree_device.h  emitter.h  envmap.h  framebuffer.cu  framebuffer.h  integrator_context.h  light.h  main.cpp  main.cu  material.h  mesh.h  numtypes.h  optix_as.h  optix_common.cu  optix_common.h  optix_renderer.cu  optix_renderer.h  ray.h  render_context.cu  render_context.h  render_context_common.h  renderer.h  scene.cu  scene.h  scene_loader.cu  scene_loader.h  settings.h  sphere.h  texture.cu  texture.h  vec3.h
src/color/: cie_spectrums.h  color_space.h  rgb2spec.cpp  rgb2spec.h  rgb_spectrum.cu  rgb_spectrum.h  sampled_lambdas.cpp  sampled_lambdas.h  sampled_spectrum.cpp  sampled_spectrum.h  spectral_data.h  spectral_quantity.cpp  spectral_quantity.h  spectrum.cpp  spectrum.cu  spectrum.h  spectrum_consts.h
src/geometry/: aabb.h  axis.h  bvh.cu  bvh.h  geometry.cpp  geometry.cu  geometry.h  geometry_container.cpp  geometry_container.h  geometry_storage.cpp  geometry_storage.h  instance_id.h  intersection.h  ray.h  wavefront_ray.h
src/gui/: gui.cpp  gui.h  gui_state.h
src/integrator/: bdpt_nee_integrator.cpp  bdpt_nee_integrator.h  hit_type.h  integrator.cpp  integrator.h  integrator_type.h  intersection.h  lambda_guiding_integrator.cpp  lambda_guiding_integrator.h  light_sampler.cpp  light_sampler.cu  light_sampler.h  mis_nee_integrator.cpp  mis_nee_integrator.h  optix_pt.cu  optix_pt.h  path_guiding_integrator.cpp  path_guiding_integrator.h  shading_frame.h  sobol_matrices.h  sobol_sampler.h  test_sobol_sampler.cpp  utils.h
src/io/: image_writer.h  progress_bar.h  scene_loader.cpp  scene_loader.cu  scene_loader.h  window.cu  window.h
src/kernels/: megakernel.cu  megakernel.h  optix_pt.cu  optix_pt.h  optix_triangle.cu  optix_triangle.h  raygen.cu  raygen.h  wavefront_common.h
src/materials/: bsdf_sample.h  coateddiffuse.cpp  coateddiffuse.h  common.cpp  common.h  conductor.cpp  conductor.h  dielectric.cpp  dielectric.h  diffuse.cpp  diffuse.h  diffuse_transmission.cpp  diffuse_transmission.h  material.cpp  material.h  material_id.h  plastic.cpp  plastic.h  rough_coateddiffuse.cpp  rough_coateddiffuse.h  rough_conductor.cpp  rough_conductor.h  rough_plastic.cpp  rough_plastic.h  test_ggx.cpp  test_ggx.cu  trowbridge_reitz_ggx.cpp  trowbridge_reitz_ggx.h
src/math/: aabb.h  axis.h  coordinate_system.h  discrete_dist.h  math_utils.h  morton.cpp  morton.h  piecewise_dist.cpp  piecewise_dist.h  sampling.cpp  sampling.h  statistics.h  test_aabb.cpp  test_coordinate_system.cpp  test_morton.cpp  test_sampling_piecewise.cpp  test_transform.cpp  transform.cpp  transform.h  vecmath.h
src/math/samplers/: halton_sampler.cpp  halton_sampler.h  sampler.cpp  sampler.h  sobol_matrices.h  sobol_sampler.h  test_sobol_sampler.cpp
src/mitsuba_loader/: mitsuba_loader.cpp  mitsuba_loader.h
src/path_guiding/: binary_tree.cpp  binary_tree.h  sc_tree.cpp  sc_tree.h  sd_tree.cpp  sd_tree.h  test_binary_tree.cpp  test_sd_tree.cpp
src/pbrt_loader/: lexer.cpp  lexer.h  lexer_test.cpp  param.h  pbrt_loader.cpp  pbrt_loader.h  stack_file_stream.h  test_lexer.cpp  test_params_parser.cpp  test_pbrt_loader.cpp
src/scene/: emitter.cpp  emitter.h  envmap.cpp  envmap.h  image.cpp  image.h  light.h  scene.cpp  scene.h  scene_attribs.h  sphere_square_mapping.cpp  sphere_square_mapping.h  test_envmap.cpp  test_sphere_square_mapping.cpp  texture.cpp  texture.h  texture_id.h  texture_types.h
src/shapes/: mesh.cu  mesh.h  triangle.cu  triangle.h
src/spectrum/: sampled_lambdas.cpp  sampled_lambdas.h  spectral_data.h  spectral_quantity.h  spectrum.cpp  spectrum.h  test_spectrum.cpp
src/test/: catch2_test_setup.cpp  test_globals.h
src/utils/: algs.h  basic_types.h  blue_noise_sampler.h  blue_noise_tiles.h  chunk_allocator.h  colormaps.h  cuda_box.h  cuda_err.h  float_comparison.h  hasher.h  image_writer.h  make_array.h  numtypes.h  panic.h  render_threads.cpp  render_threads.h  rng.h  sampler.cpp  sampler.h  shared_vector.h  tests.cpp  tests.cu  thread_pool.cpp  thread_pool.h  um_vector.h
tools/: crop_script.sh  graphs.py  merge_images.sh  polyfit.py  spectral_graphs.py  sript.py  vecvis.r
tools/rgb2spec/: rgb2spec.c  rgb2spec.h  rgb2spec_opt.cpp
tools/rgb2spec/details/: cie1931.h  lu.h
tools/scripts/: compare_images.fish  convergence_graphs.py  cornell-box-f10-lg.csv  cornell-box-f10-normal.csv  cornell-box-lg.csv  cornell-box-normal.csv  crop_images.fish  machines-lg.csv  machines-normal.csv  prepareresults.fish  staircase-lg.csv  staircase-normal.csv
tools/scripts/csvs/: cbox-lg.csv  cbox-normal.csv  cboxf-lg.csv  cboxf-normal.csv  kitchenpc-lg.csv  kitchenpc-normal.csv  machines-lg.csv  machines-normal.csv  staircaseph-lg.csv  staircaseph-normal.csv
tools/spectral_data/: 070101.csv  1110-illum.csv  CIE_illum_FLs.csv  CIE_lms_cf_2deg.csv  CIE_std_illum_D65.csv  CIE_xyz_1931_2deg.csv  cbox-illum.csv  lerp_spectrum.csv  macbeth_pb.csv  pdf_groundtruth_cbox.csv  pdf_groundtruth_f10.csv  pdf_learned_cbox.csv  pdf_learned_f10.csv  philips_helios.csv  phillips-candlelight.csv
tools/thesis_images/pt_convergence/: merge_images.sh
